<resources>
    <string name="app_name">FirstProject</string>
    <string name="day">Day</string>
    <string name="week">Week</string>
    <string name="all">All</string>
    <string name="add">Add</string>
    <string name="add_entry">Add entry</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_item">Add item</string>
    <string name="todo">todo</string>
    <string name="list_of_items">List of items</string>
    <string name="image_of_item">Image of item</string>
    <string name="add_edit_item">Add/Edit item</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="priority">Priority</string>
    <string name="period">Period</string>
    <string name="save">Save</string>
    <string name="choose_priority_value">choose priority value</string>
    <string name="choose_period_value">choose period value</string>
    <string name="title_empty_warning">Title cannot be empty!</string>
    <string name="list_item_description">List item description</string>
    <string name="m">M</string>
    <string name="d">D</string>
</resources>